@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/ucspi-ssl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ucspi-ssl/ChangeLog,v 1.20 2010/09/25 13:47:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ucspi-ssl/ChangeLog,v 1.21 2010/10/24 15:29:47 klausman Exp $
+
+  24 Oct 2010; Tobias Klausmann <klausman@gentoo.org>
+  ucspi-ssl-0.70-r1.ebuild:
+  Stable on alpha, bug #333915
 
   25 Sep 2010; Markus Meier <maekke@gentoo.org> ucspi-ssl-0.70-r1.ebuild:
   arm stable, bug #333915
